test/expected/cli/command_substitution_interrupt.out
status=1
shit: 1:1: error: Interrupted.
     1 |  value=$(echo ready > "$1"; while :; do :; done)
       |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
clean-interrupt
